* Added some comments on System. * New routine PadOneKeySinglePress() and PadTwoKeySinglePress(). * Temp waypoints now turn red when colliding with an aircraft or with a previously existing waypoint. * When loading files, GPU operation is finishedbefore calling fopen. Also, I_MASK is disabled just in case. * For PLT files, actual tile needs to be set instead of parking number.

--- a/Source/Makefile
+++ b/Source/Makefile
@@ -47,7 +47,7 @@ $(OBJ_DIR)/%.o: $(SRC_DIR)/%.c
 	$(CC) $< -o $@ $(DEFINE) $(CC_FLAGS)
 	
 $(PROJECT).elf: 
-	$(LINKER) Obj/*.o -o Exe/$(PROJECT).elf $(LIBS)
+	$(LINKER) Obj/*.o -o Exe/$(PROJECT).elf $(LIBS) -Wl,--gc-sections
 	
 $(PROJECT).exe:
 	$(ELF2EXE) Exe/$(PROJECT).elf Exe/$(PROJECT).exe $(ELF2EXE_FLAGS)
