--- a/Source/Makefile
+++ b/Source/Makefile
@@ -1,5 +1,6 @@
 CC = psx-gcc
-DEFINE= -DFIXMATH_FAST_SIN -D_PAL_MODE_ -DPSXSDK_DEBUG -DNO_CDDA -DNO_INTRO
+DEFINE= -DFIXMATH_FAST_SIN -D_PAL_MODE_ -DPSXSDK_DEBUG
+DEFINE +=  -DNO_CDDA -DNO_INTRO
 LIBS= -lfixmath
 CC_FLAGS = -Wall -Werror -c -Os
 LINKER = psx-gcc
