* Aircraft 0 was incorrectly being removed because indexes 0 to GAME_MAX_AIRCRAFT were being read instead of 0 to ptrPlayer->ActiveAircraft. * Solved issues with linked list overflow. A detection mechanism has also been added. * New state STATE_ENTERING_RWY. * GameGuiActiveAircraftList has been moved from GameGui to Game module. * Active aircraft list for each player is now updated each time that a new flight either appears or disappears. * Other minor fixes.

--- a/Source/Makefile
+++ b/Source/Makefile
@@ -1,6 +1,7 @@
 CC = psx-gcc
 DEFINE= -DFIXMATH_FAST_SIN -D_PAL_MODE_ -DPSXSDK_DEBUG
-DEFINE +=  -DNO_CDDA -DNO_INTRO
+DEFINE +=  -DNO_CDDA
+DEFINE +=  -DNO_INTRO
 LIBS= -lfixmath
 CC_FLAGS = -Wall -Werror -c -Os
 LINKER = psx-gcc
