* More passengers by correct sequence are unboarded. * Aircraft should not be removed on State == STATE_APPROACH. * Initial implementation for finished game. * Added some comments on System.c. * GameGuiPrepareNotificationString() deprecated.

--- a/Source/Makefile
+++ b/Source/Makefile
@@ -1,5 +1,6 @@
 CC = psx-gcc
-DEFINE= -DFIXMATH_FAST_SIN -D_PAL_MODE_ -DPSXSDK_DEBUG
+DEFINE= -DFIXMATH_FAST_SIN -D_PAL_MODE_
+DEFINE += -DPSXSDK_DEBUG
 DEFINE +=  -DNO_CDDA
 DEFINE +=  -DNO_INTRO
 LIBS= -lfixmath
