* (Bugfix) MemCard: MEMCARD_MAXIMUM_SECTOR changed from 512 (8 << MEMCARD_SECTORS_PER_BLOCK_BITSHIFT) to 1024 (16 << MEMCARD_SECTORS_PER_BLOCK_BITSHIFT). * DrawEnv and DispEnv buffers are no longer swapped using DMA commands, but GPIO. This ensures stability under real hw. TODO: how to fix in 2-player mode? * Provisionally removed semi-transparency for aircraft shadow sprite.

--- a/Source/Makefile
+++ b/Source/Makefile
@@ -2,7 +2,7 @@ CC = psx-gcc
 DEFINE= -DFIXMATH_FAST_SIN -D_PAL_MODE_
 DEFINE += -DPSXSDK_DEBUG
 DEFINE +=  -DNO_CDDA
-DEFINE +=  -DNO_INTRO
+#DEFINE +=  -DNO_INTRO
 LIBS= -lfixmath
 CC_FLAGS = -Wall -Werror -c -Os
 LINKER = psx-gcc
