* (Bugfix): padx_last_key_single_pressed was being checked AFTER checking pads connected, so it was never calculated if, for example, pad 2 was disconnected. This was only reproducible under real hardware.

--- a/Source/Makefile
+++ b/Source/Makefile
@@ -22,7 +22,7 @@ PATH := $(PATH):$(PSXSDK_PATH)/bin/
 PROJECT_DIR = ~/$(PROJECT)
 
 #Uncomment this DEFINE below to use Airport together with OpenSend + QPSXSerial toolchain.
-#DEFINE +=  -DSERIAL_INTERFACE
+DEFINE +=  -DSERIAL_INTERFACE
 
 # PSXSDK tools definitions
 # ELF2EXE:
