* Removed unneeded -g flag from Makefile. * Aircraft now prevents collision against other aircraft if state == STATE_TAXIING. * Game: new event handlers for new Aircraft collision prevention algorithm. * Font: although not compulsory, _blend_effect_lum should be volatile. * Other minor changes.

--- a/Source/Makefile
+++ b/Source/Makefile
@@ -17,7 +17,7 @@ DEFINE +=  -DNO_INTRO
 
 # Compiler flags
 LIBS= -lfixmath
-CC_FLAGS = -Wall -Werror -c -Os -Wfatal-errors -g
+CC_FLAGS = -Wall -Werror -c -Os -Wfatal-errors
 
 # Path definitions
 PSXSDK_PATH = /usr/local/psxsdk
