* Slight optimization: all comparations against true are now compared against != false. + Added a provisional background during gameplay (still WIP). * Map editor now allows creating a map.

--- a/Source/Makefile
+++ b/Source/Makefile
@@ -102,6 +102,8 @@ SPRITE_OBJECTS =	$(addprefix $(OBJ_SPRITES_PATH)/,	PSXDISK.TIM			\
 														PAGEUPDN.TIM		\
 														BLDNGS1.TIM			\
 														ARROW.TIM			\
+														BCNGW.TIM			\
+														CITYBG1.TIM			\
 														MENUSTAR.TIM	)
 
 SPRITE_OBJECTS += $(addprefix $(OBJ_FONTS_PATH)/,	INTROFNT.TIM			\
