* New LEVEL2.LVL was not being displayed correctly as I forgot to include the new tiles on Game.c. * Some work done on runway exit detection, but still TODO. * Minor change in LoadMenu.c.

--- a/Source/MapEditor/tileset.ini
+++ b/Source/MapEditor/tileset.ini
@@ -6,3 +6,16 @@ tile3 = "Asphalt"
 tile4 = "Runway mid"
 tile5 = "Runway start/end 1"
 tile6 = "Runway start/end 2"
+tile7 = "Parking 1"
+tile8 = "Parking 2"
+tile9 = "Taxiway crossing, grass border"
+tile10 = "Taxiway, grass border"
+tile11 = "Taxiway corner, grass border 1"
+tile12 = "Water grass border 1"
+tile13 = "Water grass border 2"
+tile14 = "Runway holding point 1"
+tile15 = "Runway holding point 2"
+tile16 = "Runway enter/exit, asphalt border 1"
+tile17 = "Taxiway corner, grass border 2"
+tile18 = "Taxiway 4-way crossing, grass border"
+tile19 = "Runway enter/exit, asphalt border 2"
