* Aircraft.c: since "rotate" member != 0 would render ArrowSpr incorrectly, I have created two separate sprites: LeftRightArrowSpr and UpDownArrowSpr. Still, H_FLIP isn't working properly. * GameGui.c: new function GameGuiCalculateNextAircraftTime(), which calculates remaining time for next aircraft on the list. * GameStructures.h: new parameter NextAircraftTime for TYPE_PLAYER structures. * Game.c: added call to new function GameGuiCalculateNextAircraftTime().

--- a/Source/Makefile
+++ b/Source/Makefile
@@ -101,7 +101,8 @@ SPRITE_OBJECTS =	$(addprefix $(OBJ_SPRITES_PATH)/,	PSXDISK.TIM			\
 														DEPARR.TIM			\
 														PAGEUPDN.TIM		\
 														BLDNGS1.TIM			\
-														ARROW.TIM			\
+														LFRARROW.TIM		\
+														UDNARROW.TIM		\
 														BCNGW.TIM			\
 														CITYBG1.TIM			\
 														MENUSTAR.TIM	)
