Bugfix: minutes were not being retrieved from PLT files. Game.c: parking slots cannot be selected if an aircraft in STATE_PARKED state is on it. Other fixes and improvements. Added some tiles from TILESET2.TIM

--- a/Source/MapEditor/tileset.ini
+++ b/Source/MapEditor/tileset.ini
@@ -1,4 +1,5 @@
 [tileset1]
+path = "../../Sprites/TILESET1.bmp"
 tile0 = "Grass"
 tile1 = "Asphalt with borders"
 tile2 = "Water"
@@ -19,3 +20,8 @@ tile16 = "Runway enter/exit, asphalt border 1"
 tile17 = "Taxiway corner, grass border 2"
 tile18 = "Taxiway 4-way crossing, grass border"
 tile19 = "Runway enter/exit, asphalt border 2"
+
+[tileset2]
+path = "../../Sprites/TILESET2.bmp"
+tile20 = "Unused"
+tile21 = "Taxiway corner, grass border 3"
